--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <script src="assets/js/jquery.min.js"></script>
-  <!-- <script src="assets/js/slick.js"></script>
+  <script src="assets/js/slick.js"></script>
   <script>
   $(document).ready(function(){
     $('.customer-logos').slick({
@@ -62,7 +62,7 @@
         }]
     });
 });
-  </script> -->
+  </script>
   <script>
   $(document).ready(function(){
     var moving__background = $("#header__background");
